2003-02-08  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/libglade.override (connect_many): Add PyErr_Clear()
	here. Since PyMapping_GetItemString will raise an AttributeError
	if the handler can't be found.

2003-01-31  James Henstridge  <james@daa.com.au>

	* gtk/gdk.override (_wrap_gdk_draw_rgb_image): add implementation.
	(_wrap_gdk_draw_rgb_32_image): add implementation.
	(_wrap_gdk_draw_gray_image): add
	(_wrap_gdk_draw_rgb_image, _wrap_gdk_draw_rgb_32_image): add xdith
	and ydith optional arguments, providing the functionality of the
	_dithalign variants.

2003-01-30  Jon Trowbridge  <trow@ximian.com>

	* gtk/gdk.override: Only call import_array if we HAVE_NUMPY.

2003-01-30  James Henstridge  <james@daa.com.au>

	* gtk/gdk.override (_wrap_gdk_pixbuf__get_pixel_array): add
	wrapper that returns a NumPy array.

	* gtk/gdk-types.defs (Pixbuf): add a "pixel_array" member to
	pixbuf object.

	* configure.in (enable_numpy): get rid of code detecting which
	directory Numeric's arrayobject.h header is in.  No point in
	supporting ancient versions ...

2003-01-30  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtk-types.defs (Layout): Wrap bin_window.

2003-01-24  Johan Dahlin  <jdahlin@async.com.br>

	* dsextras.py (InstallLib.add_template_option): Fix template bustage.

	* gtk/gtk.defs (set_from_image, set_from_file, set_from_pixbuf):
	Allow NULL here too. This definitly fixes #103559

2003-01-23  Johan Dahlin  <jdahlin@async.com.br>
 
 	* gtk/gtkmodule.c (init_gtk): Added a timeout that calls
 	python_do_pending_calls every 100 ms.
 	(python_do_pending_calls): Call PyErr_CheckSignals, so Ctrl-C
 	works as expected inside of gtk_main(). Fixes #72333        

2003-01-21  Johan Dahlin  <jdahlin@async.com.br>

	* dsextras.py (Template.generate): Import codegen here instead,
	needs to be fixed in the future though.

	* Makefile.am (EXTRA_DIST): Added dsextras.py

	* gobjectmodule.c: Add GMainContext bindings and complete the