@@ -10,6 +10,7 @@ pygtkincludedir=${includedir}/pygtk-2.0
 
 # same here.  Useful when calling the code generator in addon packages.
 defsdir=${datadir}/pygtk/2.0/defs
+codegendir=${datadir}/pygtk/2.0/codegen
 
 Name: PyGTK
 Description: Python bindings for GTK+ and related libraries
