@@ -1,5 +1,11 @@
 2003-02-08  Johan Dahlin  <jdahlin@async.com.br>
 
+	* pygtk-2.0.pc.in (codegendir): Added.
+
+	* setup.py: Added Numeric and gtkgl support (gtkgl untested).
+
+	* dsextras.py: Updated.
+
 	* gtk/libglade.override (connect_many): Add PyErr_Clear()
 	here. Since PyMapping_GetItemString will raise an AttributeError
 	if the handler can't be found.
